bug fix for recommended alignment safari issue

--- a/styles/subscription.css
+++ b/styles/subscription.css
@@ -281,7 +281,6 @@
 
 .marginTop-20 {
     margin-top: -40px !important;
-    overflow: auto;
 }
 .marginTopSoldOut {
     margin-top: -40px !important;
